Fix images overflow on blog posts

--- a/src/main/resources/static/resources/css/blog-post.css
+++ b/src/main/resources/static/resources/css/blog-post.css
@@ -49,6 +49,10 @@ article > figure {
     margin: 30px 0;
 }
 
+.content img {
+    max-width: 100%;
+}
+
 /* Big tablets to 1200px */
 @media only screen and (max-width: 1200px) {
     article {
